add transaction history logic
