# internal/gateway/api/http/accounts.go
@@ -5,13 +5,20 @@ import (
 	"fmt"
 	"net/http"
 
-	pb "github.com/SlayerSv/payments/gen/wallet"
+	authpb "github.com/SlayerSv/payments/gen/auth"
+	transpb "github.com/SlayerSv/payments/gen/trans"
+	walletpb "github.com/SlayerSv/payments/gen/wallet"
 	"github.com/SlayerSv/payments/internal/shared/errs"
-	"github.com/SlayerSv/payments/internal/wallet/models"
+	transmodels "github.com/SlayerSv/payments/internal/trans/models"
+	walletmodels "github.com/SlayerSv/payments/internal/wallet/models"
 )
 
 type AccountID struct {
 	ID string `json:"id"`
+}
+
+type History struct {
+	Transactions []transmodels.TransactionDTO `json:"transactions"`
 }
 
 // GetAccount gets user's wallet/savings account
@@ -21,13 +28,14 @@ type AccountID struct {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
+// @Param        id  path string true "Account ID"
 // @Success      200  {object}  models.AccountResponse
 // @Failure      400  {object}  errs.Response "Bad Request"
 // @Router       /me/accounts/{account_id} [get]
 func (app *App) GetAccount(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	accID, err := app.ExtractPathValue(r, "account_id")
-	resp, err := app.Clients.Wallet.Get(ctx, &pb.GetRequest{Id: accID})
+	resp, err := app.Clients.Wallet.Get(ctx, &walletpb.GetRequest{Id: accID})
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting account: %w", errs.Internal, err))
 		return
@@ -48,12 +56,12 @@ func (app *App) GetAccount(w http.ResponseWriter, r *http.Request) {
 // @Router       /me/accounts [get]
 func (app *App) GetAllAccounts(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	resp, err := app.Clients.Wallet.GetAll(ctx, &pb.GetAllRequest{OwnerId: ""})
+	resp, err := app.Clients.Wallet.GetAll(ctx, &walletpb.GetAllRequest{OwnerId: ""})
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting accounts: %w", errs.Internal, err))
 		return
 	}
-	accs := models.AccountsResponse{Accounts: []models.AccountResponse{}}
+	accs := walletmodels.AccountsResponse{Accounts: []walletmodels.AccountResponse{}}
 	for _, acc := range resp.Accounts {
 		accs.Accounts = append(accs.Accounts, pbToAcc(acc))
 	}
@@ -72,7 +80,7 @@ func (app *App) GetAllAccounts(w http.ResponseWriter, r *http.Request) {
 // @Router       /me/accounts [post]
 func (app *App) CreateAccount(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	resp, err := app.Clients.Wallet.Create(ctx, &pb.CreateRequest{OwnerId: ""})
+	resp, err := app.Clients.Wallet.Create(ctx, &walletpb.CreateRequest{OwnerId: ""})
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error creating account: %w", errs.Internal, err))
 		return
@@ -88,6 +96,7 @@ func (app *App) CreateAccount(w http.ResponseWriter, r *http.Request) {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
+// @Param        id  path string true "Account ID"
 // @Success      204
 // @Failure      400  {object}  errs.Response "Bad Request"
 // @Router       /me/accounts [delete]
@@ -99,7 +108,7 @@ func (app *App) DeleteAccount(w http.ResponseWriter, r *http.Request) {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error decoding request: %w", errs.BadRequest, err))
 		return
 	}
-	_, err = app.Clients.Wallet.Delete(ctx, &pb.DeleteRequest{Id: req.ID})
+	_, err = app.Clients.Wallet.Delete(ctx, &walletpb.DeleteRequest{Id: req.ID})
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error deleting account: %w", errs.Internal, err))
 		return
@@ -107,11 +116,57 @@ func (app *App) DeleteAccount(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(204)
 }
 
-func pbToAcc(acc *pb.Account) models.AccountResponse {
-	return models.AccountResponse{
+func (app *App) GetAccHistory(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	history, err := app.Clients.Trans.GetAccHistory(ctx, &transpb.GetAccHistoryRequest{UserId: ""})
+	if err != nil {
+		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting account history: %w", errs.Internal, err))
+		return
+	}
+	transHistory := History{Transactions: []transmodels.TransactionDTO{}}
+	if len(history.Transactions) == 0 {
+		app.Encode(w, r, transHistory)
+		return
+	}
+	ids := map[string]string{}
+	for _, trans := range history.Transactions {
+		ids[trans.Id] = ""
+	}
+	idreq := &authpb.GetEmailsRequest{}
+	for id := range ids {
+		idreq.Ids = append(idreq.Ids, id)
+	}
+	idemail, err := app.Clients.User.GetEmails(ctx, idreq)
+	if err != nil {
+		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting emails: %w", errs.Internal, err))
+		return
+	}
+	for _, trans := range history.Transactions {
+		transHistory.Transactions = append(transHistory.Transactions, pbToTrans(trans, idemail.Emails))
+	}
+	app.Encode(w, r, transHistory)
+}
+
+func pbToAcc(acc *walletpb.Account) walletmodels.AccountResponse {
+	return walletmodels.AccountResponse{
 		ID:        acc.Id,
 		OwnerID:   acc.OwnerId,
 		Balance:   acc.Balance,
 		CreatedAt: acc.CreateAt.AsTime(),
+	}
+}
+
+func pbToTrans(trans *transpb.Transaction, idemail map[string]string) transmodels.TransactionDTO {
+	return transmodels.TransactionDTO{
+		ID:            trans.Id,
+		OpType:        transmodels.OperationType(trans.OpType.String()),
+		SenderID:      trans.SenderId,
+		SenderEmail:   idemail[trans.SenderId],
+		SenderType:    transmodels.AccountType(trans.SenderType.String()),
+		ReceiverID:    trans.ReceiverId,
+		ReceiverEmail: idemail[trans.ReceiverId],
+		ReceiverType:  transmodels.AccountType(trans.ReceiverType.String()),
+		Amount:        trans.Amount,
+		CompletedAt:   trans.CreatedAt.AsTime(),
 	}
 }
